--- a/style.css
+++ b/style.css
@@ -101,6 +101,7 @@ ul li{
 
 .heading{
   text-align: center;
+  margin-top: 10px;
 }
 .heading h1{
   font-size: 30px;
@@ -197,6 +198,7 @@ info-box span{
   align-items: center;
   justify-content: center;
   margin-top: 3%;
+  gap: 20px;
 }
 .icon .up-arrow{
   width: 50px;
@@ -206,7 +208,7 @@ info-box span{
   justify-content: center;
   align-items: center;
   margin: 0px 20px;
-  border-radius: 50%;
+ border-radius: 50%;
   
 }
 .icon:hover{
@@ -248,6 +250,9 @@ footer p{
   float: right;
   margin-bottom: 20px;
   margin-right: 30px;
+  border-radius: 50%;
+  display: inline-block;
+  padding: 7px;
 }
 html{
   scroll-behavior: smooth;
